# vitis-accel-project-template

./: CMakeLists.txt  LICENSE  Makefile  README.md
common/: vhls-colorize.sh  vhls-test.cmake  vhls.tcl  vitis-device.cmake  vitis-host.cmake
device/: CMakeLists.txt  link_u200.ini
host/: CMakeLists.txt
host/include/: vadd.hpp
host/src/: ocl_common.cpp  vadd.cpp
kernel/: CMakeLists.txt
kernel/include/: vadd.hpp  vadd_kernel.hpp
kernel/src/: vadd_kernel.cpp
test/: CMakeLists.txt
test/src/: vadd_kernel_test.cpp  vadd_test.cpp
